--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,61 @@
+
+a,
+a:focus,
+a:hover {
+ color: blue;
+}
+
+html,
 body {
+  height: 100%;
   background-color: white;
+}
+
+body {
+  color: black;
+  text-align: center;
+
+}
+
+
+.lead, .aboutme {
+  color: blue;
+  font-weight: 600;
+}
+
+
+
+/* Footer section */
+.footer {
+	width: 100%;
+	position: absolute;
+    bottom: 0;
+    color: #fff;
+}
+
+/*
+ * Header
+ */
+a.navbar-brand {
+	margin-left: 5rem;
+}
+
+#brandTitle {
+	color: black;
+}
+
+.nav-link {
+  padding: .25rem .25rem;
+  font-weight: 700;
+  color: blue;
+
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-link + .nav-link {
+  margin-left: 1rem;
 }
