--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,13 @@
 a,
 a:focus,
 a:hover {
- color: blue;
+ color: green;
 }
 
 html,
 body {
   height: 100%;
-  background-color: white;
+  background-color: #f2f2f2;
 }
 
 body {
@@ -18,9 +18,14 @@ body {
 
 }
 
+.text-center {
+  color: black;
+  font-weight: bold;
+}
+
 
 .lead, .aboutme {
-  color: blue;
+  color: green;
   font-weight: 600;
 }
 
@@ -42,13 +47,13 @@ a.navbar-brand {
 }
 
 #brandTitle {
-	color: black;
+	color: white;
 }
 
 .nav-link {
   padding: .25rem .25rem;
   font-weight: 700;
-  color: blue;
+  color: green;
 
 }
 
