--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,13 @@ h1 {
 .site-wrapper {
     display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;
   min-height: 100%;
   background: url("../images/wall.jpg") no-repeat center center;
+}
+
+.img-fluid {
+  border: 5px solid white;
 }
 
 
@@ -94,4 +98,29 @@ nav {
 
 .nav-link + .nav-link {
   margin-left: 1rem;
+}
+
+.main-heading {
+  -webkit-animation-duration: 5s;
+  -moz-animation-duration: 3s;
+  -o-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-timing-function: ease-in;
+  -moz-animation-timing-function: ease-in;
+  -o-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+}
+
+.lead {
+  -webkit-animation-duration: 5s;
+  -moz-animation-duration: 3s;
+  -o-animation-duration: 3s;
+  animation-duration: 3s;
+  -webkit-animation-timing-function: ease-in;
+  -moz-animation-timing-function: ease-in;
+  -o-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  -o-animation-delay: 1s;
 }
