--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 
 h1 {
   font-weight: bolder;
+  margin-top: 100px;
 }
 
 .text-center {
@@ -32,15 +33,27 @@ h1 {
 }
 
 .site-wrapper {
-    display: table;
+  display: table;
   width: 100%;
-  height: 100%;
-  min-height: 100%;
-  background: url("../images/wall.jpg") no-repeat center center;
+  height: 100px;
+  min-height: 100px;
+  background: url("../images/mount.jpg") no-repeat center center;
 }
 
 .img-fluid {
-  border: 5px solid white;
+  border: 3px solid white;
+
+}
+
+p.lead.mt-2.mb-3 {
+  padding-bottom: 50px;
+}
+
+img.rounded-circle.img-fluid.mt-4 {
+  border: 2px solid white;
+  width: 275px; 
+  height: 275px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 
@@ -73,6 +86,7 @@ h1 {
  */
 a.navbar-brand {
 	margin-left: 5rem;
+
 }
 nav {
   color:#0d0d0d;
@@ -82,6 +96,7 @@ nav {
 
 #brandTitle {
 	color: white;
+  font-weight: bold;
 }
 
 .nav-link {
